2005-10-27  Per Bothner  <per@bothner.com>

	* ClassType.java (getSuperclass): Only getReflectClass() if isExisting.

2005-10-16  Per Bothner  <per@bothner.com>

	* ClassType.java (isAccessible): Fix thinko.

	* CodeAttr.java (castNeeded): New static hekp method that handles
	ArrayTypes as well as ClassTypes.
	(emitCheckcast): Make use of castNeeded.

2005-09-25  Per Bothner  <per@bothner.com>

	* Type.java (make): Remove redundant statement.

2005-07-28  Dean Ferreyra <dean@octw.com>

	* ClassType.java (getInterfaces): Add missing needed synchornized.

2005-05-30  Per Bothner  <per@bothner.com>

	* Variable.java (isArtificial, setArtificial): Remove unused methods.
	(ARTIFICIAL_FLAG): Remove unused constant.

2005-05-16  Per Bothner  <per@bothner.com>

	* CodeAttr.java (pushScope): All our own enterScope, so setStartPC is
	called, and the start label is allocated,

	* ClassFileInput.java (readAttribute): Minor optmization.

2005-05-10  Per Bothner  <per@bothner.com>

	* ClassType.java (getMethod): New method.

2005-04-18  Per Bothner  <per@bothner.com>

	* ObjectType.java (getReflectClass): Update PreProcess names.

2005-04-17  Per Bothner  <per@bothner.com>

	* ObjectType.java (getReflectClass): Do initCause on wrapper
	RuntimeException, if Java4, which is now the default.

2005-04-03  Per Bothner  <per@bothner.com>

	* Method.java: Remove bogus @return in javadoc comment.
	* Variable.java: Likewise.

2005-03-22  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitTryStart): Create new TryState *after* we
	save any stack values, so saves come before exception range start.

2005-03-02  Per Bothner  <per@bothner.com>

	* Field.java (setConstantValue): Handle boolean and char fields.

2005-02-25  Per Bothner  <per@bothner.com>

	* CodeAttr.java (pushScope): Don't do a getLabel - it's redundant,
	since enterScope also does it, via setStartPC.

2005-01-30  Per Bothner  <per@bothner.com>

	* Access.java (toString): Fix typo.
