@@ -1,3 +1,7 @@
+2005-11-14  Per Bothner  <per@bothner.com>
+
+	* ClassType.java (getMethod): Also search implemented interfaces.
+
 2005-10-27  Per Bothner  <per@bothner.com>
 
 	* ClassType.java (getSuperclass): Only getReflectClass() if isExisting.
